mostly works just have to do oauth and actually make the openapi spec correct
